[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/Installed.gd" type="Script" id=1]
[ext_resource path="res://scenes/VersionSelect.gd" type="Script" id=2]
[ext_resource path="res://scenes/AddNew.gd" type="Script" id=3]
[ext_resource path="res://scenes/Add.gd" type="Script" id=4]
[ext_resource path="res://icons/alpha.res" type="Texture" id=5]
[ext_resource path="res://scenes/Donate.gd" type="Script" id=6]
[ext_resource path="res://icons/paypal_donate.png" type="Texture" id=7]
[ext_resource path="res://icons/paypal_donate_hover.png" type="Texture" id=8]
[ext_resource path="res://scenes/NewsFeed.gd" type="Script" id=9]
[ext_resource path="res://scenes/Version.gd" type="Script" id=10]
[ext_resource path="res://theme/main.theme" type="Theme" id=11]
[ext_resource path="res://theme/round_and_shaded.stylebox" type="StyleBox" id=12]

[sub_resource type="StyleBoxEmpty" id=3052]

[sub_resource type="StyleBoxEmpty" id=3053]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
theme = ExtResource( 11 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBox" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1046.0
margin_bottom = 580.0
custom_constants/separation = 10

[node name="MenuBar" type="VBoxContainer" parent="MarginContainer/HBox"]
margin_right = 201.0
margin_bottom = 560.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 10

[node name="Refresh" type="Button" parent="MarginContainer/HBox/MenuBar"]
margin_right = 201.0
margin_bottom = 68.0
hint_tooltip = "Refresh the database to show new available versions"
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Refresh"

[node name="VersionSelect" type="OptionButton" parent="MarginContainer/HBox/MenuBar"]
margin_top = 78.0
margin_right = 201.0
margin_bottom = 146.0
hint_tooltip = "Select a Godot version to download"
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Refresh to populate list"
align = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Download" type="Button" parent="MarginContainer/HBox/MenuBar"]
margin_top = 156.0
margin_right = 201.0
margin_bottom = 224.0
hint_tooltip = "Download the selected version"
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Download"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="MarginContainer/HBox/MenuBar"]
margin_top = 234.0
margin_right = 201.0
margin_bottom = 302.0
hint_tooltip = "Add a custom version or another tool from an .exe"
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Add from file.."
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
add_popup = NodePath("../../../../AddNew")

[node name="Include" type="Label" parent="MarginContainer/HBox/MenuBar"]
margin_top = 312.0
margin_right = 201.0
margin_bottom = 339.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Include:"

[node name="Alpha" type="CheckBox" parent="MarginContainer/HBox/MenuBar"]
margin_top = 349.0
margin_right = 201.0
margin_bottom = 374.0
size_flags_horizontal = 3
text = "Alpha"

[node name="Beta" type="CheckBox" parent="MarginContainer/HBox/MenuBar"]
margin_top = 384.0
margin_right = 201.0
margin_bottom = 409.0
size_flags_horizontal = 3
text = "Beta"

[node name="RC" type="CheckBox" parent="MarginContainer/HBox/MenuBar"]
margin_top = 419.0
margin_right = 201.0
margin_bottom = 444.0
size_flags_horizontal = 3
text = "RC"

[node name="Donate" type="TextureButton" parent="MarginContainer/HBox/MenuBar"]
margin_top = 454.0
margin_right = 201.0
margin_bottom = 522.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="HBoxContainer" parent="MarginContainer/HBox/MenuBar"]
margin_top = 532.0
margin_right = 201.0
margin_bottom = 559.0
size_flags_horizontal = 3
script = ExtResource( 10 )

[node name="tag" type="Label" parent="MarginContainer/HBox/MenuBar/Version"]
margin_right = 148.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Version Tag: vX.XX"

[node name="update" type="Button" parent="MarginContainer/HBox/MenuBar/Version"]
margin_left = 151.0
margin_right = 201.0
margin_bottom = 27.0
text = "Update"

[node name="req" type="HTTPRequest" parent="MarginContainer/HBox/MenuBar/Version"]

[node name="Installed" type="ItemList" parent="MarginContainer/HBox"]
margin_left = 211.0
margin_right = 613.0
margin_bottom = 560.0
rect_min_size = Vector2( 335, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_selected = Color( 0.27451, 0.54902, 0.74902, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/vseparation = 10
custom_constants/line_separation = 10
custom_constants/icon_margin = 10
custom_constants/hseparation = 10
items = [ "Item 0", ExtResource( 5 ), false ]
allow_rmb_select = true
fixed_icon_size = Vector2( 64, 64 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
context_menu = NodePath("ContextMenu")

[node name="ContextMenu" type="PopupMenu" parent="MarginContainer/HBox/Installed"]
margin_right = 55.0
margin_bottom = 26.0
items = [ "Remove", null, 0, false, false, 0, 0, null, "", false, "Move Up", null, 0, false, false, 1, 0, null, "", false, "Move Down", null, 0, false, false, 2, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="MarginContainer/HBox"]
margin_left = 623.0
margin_right = 1026.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
script = ExtResource( 9 )

[node name="Feed" type="VBoxContainer" parent="MarginContainer/HBox/Scroll"]
margin_left = 10.0
margin_top = 10.0
margin_right = 393.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/HBox/Scroll/Feed"]
margin_right = 383.0
margin_bottom = 27.0
text = "NEWS"
align = 1

[node name="Loading" type="RichTextLabel" parent="MarginContainer/HBox/Scroll/Feed"]
visible = false
margin_top = 40.0
margin_right = 383.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 20 )
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 3052 )
custom_styles/normal = SubResource( 3053 )
bbcode_enabled = true
bbcode_text = "[center][wave]updating...[/wave][/center]"
text = "updating..."

[node name="req" type="HTTPRequest" parent="MarginContainer/HBox/Scroll"]

[node name="AddNew" type="Popup" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -71.0
margin_right = 373.0
margin_bottom = 129.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
select_dialog = NodePath("../SelectPath")

[node name="Panel" type="Panel" parent="AddNew"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="AddNew"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="AddNew/Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 504.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="AddNew/Margin/VBox"]
margin_right = 484.0
margin_bottom = 27.0
text = "Add new version.."
align = 1

[node name="path" type="HBoxContainer" parent="AddNew/Margin/VBox"]
margin_top = 30.0
margin_right = 484.0
margin_bottom = 57.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AddNew/Margin/VBox/path"]
margin_right = 85.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Path"

[node name="LineEdit" type="LineEdit" parent="AddNew/Margin/VBox/path"]
margin_left = 88.0
margin_right = 430.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Select" type="Button" parent="AddNew/Margin/VBox/path"]
margin_left = 433.0
margin_right = 483.0
margin_bottom = 27.0
text = "Select.."

[node name="name" type="HBoxContainer" parent="AddNew/Margin/VBox"]
margin_top = 60.0
margin_right = 484.0
margin_bottom = 87.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AddNew/Margin/VBox/name"]
margin_right = 96.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Name"

[node name="LineEdit" type="LineEdit" parent="AddNew/Margin/VBox/name"]
margin_left = 99.0
margin_right = 484.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="arguments" type="HBoxContainer" parent="AddNew/Margin/VBox"]
margin_top = 90.0
margin_right = 484.0
margin_bottom = 117.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AddNew/Margin/VBox/arguments"]
margin_right = 96.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Arguments"

[node name="LineEdit" type="LineEdit" parent="AddNew/Margin/VBox/arguments"]
margin_left = 99.0
margin_right = 484.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Add" type="Button" parent="AddNew/Margin/VBox"]
margin_top = 120.0
margin_right = 484.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Add"

[node name="SelectPath" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = 75.0
margin_right = -128.0
margin_bottom = -75.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.exe ; Godot executable files" )

[connection signal="pressed" from="MarginContainer/HBox/MenuBar/Refresh" to="MarginContainer/HBox/MenuBar/VersionSelect" method="_on_Refresh_pressed"]
[connection signal="refresh_finished" from="MarginContainer/HBox/MenuBar/VersionSelect" to="MarginContainer/HBox/MenuBar/VersionSelect" method="_on_VersionSelect_refresh_finished"]
[connection signal="version_added" from="MarginContainer/HBox/MenuBar/VersionSelect" to="MarginContainer/HBox/Installed" method="_on_version_added"]
[connection signal="pressed" from="MarginContainer/HBox/MenuBar/Download" to="MarginContainer/HBox/MenuBar/VersionSelect" method="_on_Download_pressed"]
[connection signal="pressed" from="MarginContainer/HBox/MenuBar/Add" to="MarginContainer/HBox/MenuBar/Add" method="_on_Add_pressed"]
[connection signal="toggled" from="MarginContainer/HBox/MenuBar/Alpha" to="MarginContainer/HBox/MenuBar/VersionSelect" method="_on_Alpha_toggled"]
[connection signal="toggled" from="MarginContainer/HBox/MenuBar/Beta" to="MarginContainer/HBox/MenuBar/VersionSelect" method="_on_Beta_toggled"]
[connection signal="toggled" from="MarginContainer/HBox/MenuBar/RC" to="MarginContainer/HBox/MenuBar/VersionSelect" method="_on_RC_toggled"]
[connection signal="pressed" from="MarginContainer/HBox/MenuBar/Donate" to="MarginContainer/HBox/MenuBar/Donate" method="_on_Donate_pressed"]
[connection signal="pressed" from="MarginContainer/HBox/MenuBar/Version/update" to="MarginContainer/HBox/MenuBar/Version" method="_on_update_pressed"]
[connection signal="request_completed" from="MarginContainer/HBox/MenuBar/Version/req" to="MarginContainer/HBox/MenuBar/Version" method="_on_request_completed"]
[connection signal="item_activated" from="MarginContainer/HBox/Installed" to="MarginContainer/HBox/Installed" method="_on_Installed_item_activated"]
[connection signal="item_rmb_selected" from="MarginContainer/HBox/Installed" to="MarginContainer/HBox/Installed" method="_on_Installed_item_rmb_selected"]
[connection signal="id_pressed" from="MarginContainer/HBox/Installed/ContextMenu" to="MarginContainer/HBox/Installed" method="_on_ContextMenu_id_pressed"]
[connection signal="about_to_show" from="AddNew" to="AddNew" method="_on_AddNew_about_to_show"]
[connection signal="version_added" from="AddNew" to="MarginContainer/HBox/Installed" method="_on_version_added"]
[connection signal="text_changed" from="AddNew/Margin/VBox/path/LineEdit" to="AddNew" method="_validate"]
[connection signal="text_entered" from="AddNew/Margin/VBox/path/LineEdit" to="AddNew" method="_validate"]
[connection signal="pressed" from="AddNew/Margin/VBox/path/Select" to="AddNew" method="_on_Select_pressed"]
[connection signal="text_changed" from="AddNew/Margin/VBox/name/LineEdit" to="AddNew" method="_validate"]
[connection signal="text_entered" from="AddNew/Margin/VBox/name/LineEdit" to="AddNew" method="_validate"]
[connection signal="pressed" from="AddNew/Margin/VBox/Add" to="AddNew" method="_on_Add_pressed"]
